--- a/components/server/client/package.json
+++ b/components/server/client/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@graphql-codegen/cli": "^3.3.0",
+    "@graphql-codegen/client-preset": "^3.0.0",
     "@mui/icons-material": "^5.6.2",
+    "axios": "^1.3.5",
     "graphql": "^16.3.0",
     "react": "^17.0.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.0",
+    "react-dropzone": "^14.2.3",
+    "react-dropzone-uploader": "^2.11.0",
     "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -19,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile": "graphql-codegen",
+    "watch": "graphql-codegen -w"
   },
   "eslintConfig": {
     "extends": [
