can upload minibrands now

--- a/components/server/client/tsconfig.json
+++ b/components/server/client/tsconfig.json
@@ -20,6 +20,5 @@
     "inlineSources": true,
     "sourceRoot": "/"
   },
-  "include": ["src", "modules"],
-  "exclude": ["acceptance", "lambdas"]
+  "include": ["src", "modules"]
 }
