--- a/components/server/client/package.json
+++ b/components/server/client/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.6.2",
     "axios": "^1.3.5",
     "graphql": "^16.3.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.0",
@@ -17,6 +18,8 @@
     "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "source-map-loader": "^4.0.1",
+    "ts-loader": "^9.4.2",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:4000",
@@ -51,6 +54,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
     "@types/react-datepicker": "^4.4.1",
-    "@types/react-dom": "^18.0.2"
+    "@types/react-dom": "^18.0.2",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
