--- a/components/server/package.json
+++ b/components/server/package.json
@@ -44,9 +44,13 @@
     "test": "dotenv -e .env.dev npx ts-node ./src/test.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.6.0",
+    "@aws-sdk/client-s3": "^3.305.0",
     "@aws-sdk/client-sqs": "^3.171.0",
+    "@aws-sdk/s3-request-presigner": "^3.305.0",
     "@onesignal/node-onesignal": "^1.0.0-beta4",
     "@prisma/client": "^4.3.0",
+    "amazon-s3-uri": "^0.1.1",
     "apollo-datasource": "^3.3.2",
     "apollo-server": "^3.10.2",
     "apollo-server-core": "^3.10.2",
@@ -54,8 +58,11 @@
     "apollo-server-plugin-base": "^3.6.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "bunyan": "^1.8.15",
     "concurrently": "^7.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-middleware": "^6.1.33",
     "graphql-shield": "^7.6.4",
