--- a/components/server/buildspec.yml
+++ b/components/server/buildspec.yml
@@ -12,6 +12,7 @@ phases:
       # - npm run integration-test
       - cd client
       - npm install
+      - npm run compile
       - npm run build
 artifacts:
   files:
