--- a/components/server/.env.dev
+++ b/components/server/.env.dev
@@ -1,6 +1,5 @@
 DATABASE_URL=postgresql://prisma:prisma@localhost:5433/testdb
-EMAIL=evacuationapp1@gmail.com
-EMAIL_PASSWORD=xgjwnooiphupyylx
 CLIENT_URL=http://localhost:3000
-JWT_SECRET=jwt-secret-123
-JWT_SECRET_REFRESH=jwt-secret-456
+SESSION_SECRET=session-secret-123
+GOOGLE_CLIENT_ID=599844032586-54gka10r0oibej2id2ot6307bcksocn5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
