--- a/components/server/.env.test
+++ b/components/server/.env.test
@@ -1,6 +1,7 @@
 DATABASE_URL=postgresql://prisma:prisma@localhost:5433/testdb
 EMAIL=test@test.com
 EMAIL_PASSWORD=test
-CLIENT_URL=localhost:3000
-JWT_SECRET=jwt-secret-123
-JWT_SECRET_REFRESH=jwt-secret-456
+CLIENT_URL=http://localhost:3000
+SESSION_SECRET=session-secret-123
+GOOGLE_CLIENT_ID=599844032586-54gka10r0oibej2id2ot6307bcksocn5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
