--- a/components/server/client/package.json
+++ b/components/server/client/package.json
@@ -7,15 +7,19 @@
     "@graphql-codegen/cli": "^3.3.0",
     "@graphql-codegen/client-preset": "^3.0.0",
     "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.129",
     "axios": "^1.3.5",
     "graphql": "^16.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
+    "react-confetti": "^6.1.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.0",
+    "react-dom-confetti": "^0.2.0",
     "react-dropzone": "^14.2.3",
     "react-dropzone-uploader": "^2.11.0",
-    "react-hook-form": "^7.30.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "source-map-loader": "^4.0.1",
