--- a/components/server/package.json
+++ b/components/server/package.json
@@ -50,6 +50,7 @@
     "@aws-sdk/s3-request-presigner": "^3.305.0",
     "@onesignal/node-onesignal": "^1.0.0-beta4",
     "@prisma/client": "^4.3.0",
+    "@types/passport": "^1.0.12",
     "amazon-s3-uri": "^0.1.1",
     "apollo-datasource": "^3.3.2",
     "apollo-server": "^3.10.2",
@@ -61,16 +62,25 @@
     "body-parser": "^1.20.2",
     "bunyan": "^1.8.15",
     "concurrently": "^7.3.0",
+    "cookie-parser": "^1.4.6",
+    "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "graphql": "^16.6.0",
     "graphql-middleware": "^6.1.33",
     "graphql-shield": "^7.6.4",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.8",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.3",
+    "react-cookie": "^4.1.1",
     "save": "^2.5.0",
     "save-dev": "^0.0.1-security",
+    "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
@@ -88,10 +98,14 @@
     "@graphql-tools/schema": "^9.0.4",
     "@graphql-tools/utils": "^8.12.0",
     "@playlyfe/gql": "^2.6.2",
+    "@types/express-session": "^1.17.7",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^29.0.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^12.7.3",
     "@types/nodemailer": "^6.4.5",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-local": "^1.0.35",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "bunyan-prettystream": "^0.1.3",
