--- a/components/server/tsconfig.json
+++ b/components/server/tsconfig.json
@@ -30,13 +30,10 @@
 
     "lib": ["es2017", "esnext", "DOM"],
     "types": ["node", "jest"],
-    "typeRoots": ["node_modules/@types", "src/generated"],
+    "typeRoots": ["node_modules/@types", "src/generated", "types"],
 
     /* Absolute imports */
-    "baseUrl": ".",
-    "paths": {
-      "src/*": ["./src/*"]
-    }
+    "baseUrl": "."
   },
   "include": ["src/**/*.ts", "**/*.test.ts"],
   "exclude": ["node_modules/**"],
