--- a/components/server/buildspec.yml
+++ b/components/server/buildspec.yml
@@ -7,6 +7,7 @@ phases:
       - npm install
       - npm run lint
       - npm run compile
+      - rm -rf node_modules
       # - npm run unit-tests
       # - npm run setup-integration-tests
       # - npm run integration-test
@@ -14,6 +15,8 @@ phases:
       - npm install
       - npm run compile
       - npm run build
+      - rm -rf node_modules
+
 artifacts:
   files:
     - "**/*"
