--- a/components/server/client/package.json
+++ b/components/server/client/package.json
@@ -57,6 +57,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
+    "@types/lodash": "^4.14.194",
     "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^18.0.2",
     "eslint": "^8.38.0",
