added global install for dot env for running

--- a/components/server/client/tsconfig.json
+++ b/components/server/client/tsconfig.json
@@ -20,5 +20,6 @@
     "inlineSources": true,
     "sourceRoot": "/"
   },
-  "include": ["src", "modules"]
+  "include": ["src", "modules"],
+  "exclude": ["node_modules/**"]
 }
