--- a/components/server/.env
+++ b/components/server/.env
@@ -4,6 +4,7 @@ DB_NAME=evacuation
 DATABASE_URL=postgresql://username:password@${DB_ENDPOINT}:${DB_PORT}/${DB_NAME}
 BUCKET_NAME=minibrands-tracker
 CLIENT_URL=http://${BUCKET_NAME}.s3-website.us-west-2.amazonaws.com
+BACKEND_URL=http://44.228.17.0:4000
 SESSION_SECRET=session-secret-123
 GOOGLE_CLIENT_ID=599844032586-54gka10r0oibej2id2ot6307bcksocn5.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
