--- a/components/server/.env.dev
+++ b/components/server/.env.dev
@@ -1,5 +1,6 @@
 DATABASE_URL=postgresql://prisma:prisma@localhost:5433/testdb
 CLIENT_URL=http://localhost:3000
+BACKEND_URL=http://localhost:4000
 SESSION_SECRET=session-secret-123
 GOOGLE_CLIENT_ID=599844032586-54gka10r0oibej2id2ot6307bcksocn5.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
