changed session store to redis

--- a/components/server/package.json
+++ b/components/server/package.json
@@ -62,6 +62,7 @@
     "body-parser": "^1.20.2",
     "bunyan": "^1.8.15",
     "concurrently": "^7.3.0",
+    "connect-redis": "^7.0.1",
     "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
@@ -78,6 +79,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "react-cookie": "^4.1.1",
+    "redis": "^4.6.6",
     "save": "^2.5.0",
     "save-dev": "^0.0.1-security",
     "universal-cookie": "^4.0.4",
