--- a/components/server/docker-compose.yml
+++ b/components/server/docker-compose.yml
@@ -13,15 +13,15 @@ services:
       POSTGRES_USER: prisma
       POSTGRES_PASSWORD: prisma
       POSTGRES_DB: testdb
-#   redis:
-#     image: redis:6.2-alpine
-#     restart: always
-#     hostname: redis
-#     ports:
-#       - '6379:6379'
-#     command: redis-server --save 20 1 --loglevel warning
-#     volumes:
-#       - cache:/data
-# volumes:
-#   cache:
-#     driver: local
+  redis:
+    image: redis:6.2-alpine
+    restart: always
+    hostname: redis
+    ports:
+      - "6379:6379"
+    command: redis-server --save 20 1 --loglevel warning
+    volumes:
+      - cache:/data
+volumes:
+  cache:
+    driver: local
