--- a/components/server/.env
+++ b/components/server/.env
@@ -8,4 +8,4 @@ BACKEND_URL=https://api.minibrandstracker.com
 SESSION_SECRET=session-secret-123
 GOOGLE_CLIENT_ID=599844032586-54gka10r0oibej2id2ot6307bcksocn5.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-REDIS_URL=minibrandstrackercache-001.9ndwcd.0001.usw2.cache.amazonaws.com:6379
+REDIS_URL=redis://minibrandstrackercache-001.9ndwcd.0001.usw2.cache.amazonaws.com:6379
