--- a/components/server/.env.dev
+++ b/components/server/.env.dev
@@ -5,3 +5,5 @@ SESSION_SECRET=session-secret-123
 GOOGLE_CLIENT_ID=599844032586-54gka10r0oibej2id2ot6307bcksocn5.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 REDIS_URL=redis://localhost:6379
+MINIBRANDS_ICONS_S3_BUCKET_NAME=minibrands-icon-bucket-dev
+REGION=us-west-2
