--- a/components/server/package.json
+++ b/components/server/package.json
@@ -73,6 +73,7 @@
     "graphql-shield": "^7.6.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
