added password reset

--- a/components/server/.env
+++ b/components/server/.env
@@ -11,3 +11,6 @@ GOOGLE_CLIENT_SECRET=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
 REDIS_URL=redis://minibrandstrackercache-001.9ndwcd.0001.usw2.cache.amazonaws.com:6379
 MINIBRANDS_ICONS_S3_BUCKET_NAME=minibrands-icon-bucket
 REGION=us-west-2
+EMAIL=minibrandstracker@gmail.com
+EMAIL_PASSWORD=igpoiagufztvimto
+JWT_SECRET=jwt_secret_123#$%%$#
