--- a/components/server/.env.dev
+++ b/components/server/.env.dev
@@ -7,3 +7,6 @@ GOOGLE_CLIENT_SECRET=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
 REDIS_URL=redis://localhost:6379
 MINIBRANDS_ICONS_S3_BUCKET_NAME=minibrands-icon-bucket-dev
 REGION=us-west-2
+EMAIL=minibrandstracker@gmail.com
+EMAIL_PASSWORD=igpoiagufztvimto
+JWT_SECRET=jwt_secret_123#$%%$#
