added friends functionality including the ability to view users profiles, which shows the minibrands they have collected as well as their achievements

--- a/components/server/client/package.json
+++ b/components/server/client/package.json
@@ -20,6 +20,7 @@
     "react-dropzone": "^14.2.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-hook-form": "^7.43.9",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "source-map-loader": "^4.0.1",
