--- a/components/server/package.json
+++ b/components/server/package.json
@@ -45,11 +45,15 @@
   },
   "dependencies": {
     "@apollo/server": "^4.6.0",
+    "@apollo/server-plugin-response-cache": "^4.1.2",
+    "@apollo/utils.keyvadapter": "^3.0.0",
     "@aws-sdk/client-s3": "^3.305.0",
     "@aws-sdk/client-sqs": "^3.171.0",
     "@aws-sdk/s3-request-presigner": "^3.305.0",
+    "@keyv/redis": "^2.5.8",
     "@onesignal/node-onesignal": "^1.0.0-beta4",
     "@prisma/client": "^4.3.0",
+    "@types/connect-redis": "^0.0.20",
     "@types/passport": "^1.0.12",
     "amazon-s3-uri": "^0.1.1",
     "apollo-datasource": "^3.3.2",
@@ -73,6 +77,7 @@
     "graphql-shield": "^7.6.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
+    "keyv": "^4.5.2",
     "lodash": "^4.17.21",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
